# magnum

./: .editorconfig  .gitignore  .gitmodules  .lgtm.yml  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  COPYING  CREDITS.md  Doxyfile  Doxyfile-mcss  Doxyfile-public  DoxygenLayout.xml  PKGBUILD  PKGBUILD-emscripten  PKGBUILD-es2  PKGBUILD-es2desktop  PKGBUILD-es3  PKGBUILD-gcc44  PKGBUILD-gcc45  PKGBUILD-gcc46  PKGBUILD-gcc47  PKGBUILD-mingw32  PKGBUILD-nacl  PKGBUILD-nacl-glibc  PKGBUILD-nacl-newlib  PKGBUILD-release  README.md
doc/snippets/: Animation-custom.cpp  Animation.cpp  Audio-scenegraph.cpp  Audio.cpp  CMakeLists.txt  DebugTools-gl.cpp  DebugTools.cpp  GL-application.cpp  GL.cpp  Magnum-application.cpp  Magnum-framebuffer.cpp  Magnum.cpp  MagnumAnimation-custom.cpp  MagnumAnimation.cpp  MagnumAudio-scenegraph.cpp  MagnumAudio.cpp  MagnumDebugTools-gl.cpp  MagnumDebugTools.cpp  MagnumGL-application.cpp  MagnumGL-framebuffer.cpp  MagnumGL.cpp  MagnumMaterialTools.cpp  MagnumMath-cpp14.cpp  MagnumMath-stl.cpp  MagnumMath.cpp  MagnumMathAlgorithms.cpp  MagnumMeshTools-gl.cpp  MagnumMeshTools-stl.cpp  MagnumMeshTools.cpp  MagnumPlatform-custom.cpp  MagnumPlatform-portability.cpp  MagnumPlatform-windowless-custom.cpp  MagnumPlatform-windowless-thread.cpp  MagnumPlatform-windowless.cpp  MagnumPlatform.cpp  MagnumPrimitives.cpp  MagnumSceneGraph-gl.cpp  MagnumSceneGraph.cpp  MagnumSceneTools.cpp  MagnumShaderTools.cpp  (+59 more)
modules/: CMakeLists.txt  FindCorrade.cmake  FindEGL.cmake  FindGLEW.cmake  FindGLFW.cmake  FindHarfBuzz.cmake  FindMagnum.cmake  FindNodeJs.cmake  FindOpenAL.cmake  FindOpenGLES2.cmake  FindOpenGLES3.cmake  FindSDL2.cmake  FindVulkan.cmake  MagnumConfig.cmake  MagnumMacros.cmake
src/: AbstractFramebuffer.cpp  AbstractFramebuffer.h  AbstractImage.cpp  AbstractImage.h  AbstractImporter.cpp  AbstractImporter.h  AbstractMaterial.h  AbstractObject.cpp  AbstractObject.h  AbstractResourceLoader.h  AbstractShaderProgram.cpp  AbstractShaderProgram.h  AbstractTexture.cpp  AbstractTexture.h  Array.h  Buffer.cpp  Buffer.h  BufferImage.cpp  BufferImage.h  BufferTexture.cpp  BufferTexture.h  BufferedImage.cpp  BufferedImage.h  BufferedTexture.cpp  BufferedTexture.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.h  ColorFormat.cpp  ColorFormat.h  Context.cpp  Context.h  CubeMapTexture.h  CubeMapTextureArray.h  DebugMarker.cpp  DebugMarker.h  DebugMessage.cpp  DebugMessage.h  DefaultFramebuffer.cpp  (+70 more)
src/Audio/: AbstractImporter.cpp  AbstractImporter.h  Audio.cpp  Audio.h  CMakeLists.txt  Context.h  Renderer.cpp  Renderer.h  Source.cpp  Source.h  magnumAudioVisibility.h
src/Contexts/: AbstractContext.h  AbstractContextHandler.h  AbstractGlInterface.h  AbstractWindowContext.h  AbstractXContext.cpp  AbstractXContext.h  AbstractXWindowContext.cpp  AbstractXWindowContext.h  CMakeLists.txt  EglContext.cpp  EglContext.h  EglContextHandler.cpp  EglContextHandler.h  EglInterface.cpp  EglInterface.h  ExtensionWrangler.cpp  ExtensionWrangler.h  GlutContext.cpp  GlutContext.h  GlutWindowContext.cpp  GlutWindowContext.h  GlxContext.cpp  GlxContext.h  GlxContextHandler.cpp  GlxContextHandler.h  GlxInterface.cpp  GlxInterface.h  GlxWindowContext.h  Sdl2Context.cpp  Sdl2Context.h  Sdl2WindowContext.cpp  Sdl2WindowContext.h  XEglContext.cpp  XEglContext.h  XEglWindowContext.h
src/DebugTools/: CMakeLists.txt  DebugTools.h  ForceRenderer.cpp  ForceRenderer.h  ObjectRenderer.cpp  ObjectRenderer.h  Profiler.cpp  Profiler.h  ResourceManager.cpp  ResourceManager.h  ShapeRenderer.cpp  ShapeRenderer.h  magnumDebugToolsVisibility.h
src/Implementation/: BufferState.cpp  BufferState.h  DebugState.cpp  DebugState.h  FramebufferState.h  MeshState.h  RendererState.h  ShaderProgramState.h  State.cpp  State.h  TextureState.cpp  TextureState.h
src/Magnum/: AbstractFramebuffer.cpp  AbstractFramebuffer.h  AbstractImage.cpp  AbstractImage.h  AbstractObject.cpp  AbstractObject.h  AbstractQuery.cpp  AbstractQuery.h  AbstractResourceLoader.h  AbstractShaderProgram.cpp  AbstractShaderProgram.h  AbstractTexture.cpp  AbstractTexture.h  Array.h  Attribute.cpp  Attribute.h  British.h  Buffer.cpp  Buffer.h  BufferImage.cpp  BufferImage.h  BufferTexture.cpp  BufferTexture.h  BufferTextureFormat.h  CMakeLists.txt  Color.h  ColorFormat.cpp  ColorFormat.h  Context.cpp  Context.h  CubeMapTexture.cpp  CubeMapTexture.h  CubeMapTextureArray.cpp  CubeMapTextureArray.h  DebugMarker.h  DebugMessage.cpp  DebugMessage.h  DebugOutput.cpp  DebugOutput.h  DefaultFramebuffer.cpp  (+72 more)
src/MagnumExternal/: CMakeLists.txt
src/MagnumPlugins/: .kateconfig  CMakeLists.txt
src/Math/: Angle.cpp  Angle.h  BoolVector.h  CMakeLists.txt  Complex.cpp  Complex.h  Constants.h  Dual.h  DualComplex.cpp  DualComplex.h  DualQuaternion.cpp  DualQuaternion.h  Functions.cpp  Functions.h  GeometryUtils.h  Math.cpp  Math.h  MathTypeTraits.h  Matrix.h  Matrix3.h  Matrix4.h  Point2D.h  Point3D.h  Quaternion.cpp  Quaternion.h  Range.h  RectangularMatrix.cpp  RectangularMatrix.h  Swizzle.h  TypeTraits.h  Unit.h  Vector.cpp  Vector.h  Vector2.h  Vector3.h  Vector4.h  constants.h  instantiation.cpp
src/MeshTools/: AbstractTool.h  CMakeLists.txt  Clean.h  CombineIndexedArrays.h  CompressIndices.cpp  CompressIndices.h  Duplicate.h  FlipNormals.cpp  FlipNormals.h  FullScreenTriangle.cpp  FullScreenTriangle.h  GenerateFlatNormals.cpp  GenerateFlatNormals.h  Interleave.h  MeshToolsVisibility.h  RemoveDuplicates.h  Subdivide.h  Tipsify.cpp  Tipsify.h  Transform.h  magnumMeshToolsVisibility.h  visibilityMeshTools.h
src/Physics/: AbstractObjectShape.cpp  AbstractObjectShape.h  AbstractShape.cpp  AbstractShape.h  AxisAlignedBox.cpp  AxisAlignedBox.h  Box.cpp  Box.h  CMakeLists.txt  Capsule.cpp  Capsule.h  Composition.cpp  Composition.h  DebugDrawResourceManager.cpp  DebugDrawResourceManager.h  Line.cpp  Line.h  LineSegment.h  ObjectShape.cpp  ObjectShape.h  ObjectShapeGroup.cpp  ObjectShapeGroup.h  Physics.h  PhysicsVisibility.h  Plane.cpp  Plane.h  Point.cpp  Point.h  Shape.cpp  Shape.h  ShapeGroup.cpp  ShapeGroup.h  ShapedObject.cpp  ShapedObject.h  (+8 more)
(+2914 files in other folders)
